objects/AcctSeed__Recurring_Account_Payable__c.object
<CustomObject>
    <description>Captures information related to recurring payable records associated with a vendor. A recurring payable is a template for creating payable records on a periodic basis.</description>
    <fields>
        <fullName>AcctSeed__Account_Payable_Frequency__c</fullName>
        <label>Payable Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Annual_Amount__c</fullName>
        <formula>IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Monthly&quot;, AcctSeed__Total2__c * 12,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Semi-Annual&quot;, AcctSeed__Total2__c * 2,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Quarterly&quot;, AcctSeed__Total2__c * 4,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Weekly&quot;, AcctSeed__Total2__c * 52,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Bi-weekly&quot;, AcctSeed__Total2__c * 26,
AcctSeed__Total2__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated annual amount.</inlineHelpText>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Recurring Payable can have either the Account (Vendor), Contact or User (Employee) as the Payee. One object must be chosen.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Payables</relationshipLabel>
        <relationshipName>Recurring_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Recurring Payable can have either the Account (Vendor), Contact or User (Employee) as the Payee. One object must be chosen.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recurring_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Exclude_From_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Leave this checkbox unchecked so Payables are created from this Recurring Payable when you have automation set up. Check it to exclude Payables from being automatically created.</description>
        <inlineHelpText>Leave this checkbox unchecked so Payables are created from this Recurring Payable when you have automation set up. Check it to exclude Payables from being automatically created.</inlineHelpText>
        <label>Exclude From Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Account_Payable_Date__c</fullName>
        <label>Last Payable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Recurring Payables</relationshipLabel>
        <relationshipName>Recurring_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Recurring_Account_Payable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Monthly_Amount__c</fullName>
        <formula>IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Annual&quot;, AcctSeed__Total2__c / 12,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Semi-Annual&quot;, AcctSeed__Total2__c / 6,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Quarterly&quot;, AcctSeed__Total2__c / 3,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Weekly&quot;, AcctSeed__Total2__c * 4,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Bi-weekly&quot;, AcctSeed__Total2__c * 2,
AcctSeed__Total2__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated monthly amount.</inlineHelpText>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Account_Payable_Date__c</fullName>
        <label>Next Payable Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Payable_Create__c</fullName>
        <formula>IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=7, &quot;Next 7 Days&quot;, 
IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=30, &quot;8 To 30 Days&quot;, 
IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=60, &quot;31 To 60 Days&quot;, 
IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=90, &quot;61 To 90 Days&quot;, 
&quot;Beyond 90 Days&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time frame to create next payable.</inlineHelpText>
        <label>Next Payable Create</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Purchase_Tax__c</fullName>
        <inlineHelpText>Summary of the Recurring Payable Lines&apos; Tax Amount fields</inlineHelpText>
        <label>Purchase Tax</label>
        <summarizedField>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Tax_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Recurring_Account_Payable__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Total2__c - AcctSeed__Purchase_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all the Recurring Payable Lines&apos; Sub-Total fields</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total2__c</fullName>
        <label>Total</label>
        <summarizedField>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Amount2__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Recurring_Account_Payable__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <label>Total</label>
        <summarizedField>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Recurring_Account_Payable__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>contains</operation>
                <value>Vendor, Customer and Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Recurring_Accounts_Payable</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recurring Payable</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Vendor__c</columns>
        <columns>AcctSeed__Account_Payable_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Active</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Vendor__c</columns>
        <columns>AcctSeed__Account_Payable_Frequency__c</columns>
        <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Vendor__c</columns>
        <columns>AcctSeed__Account_Payable_Frequency__c</columns>
        <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Automation</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Vendor__c</columns>
        <columns>AcctSeed__Account_Payable_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Total2__c</columns>
        <columns>AcctSeed__Exclude_From_Automation__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Exclude_From_Automation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Automation</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Automation_Excluded</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Vendor__c</columns>
        <columns>AcctSeed__Account_Payable_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Total2__c</columns>
        <columns>AcctSeed__Exclude_From_Automation__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Exclude_From_Automation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Automation Excluded</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Create_in_Next_7_Days</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Vendor__c</columns>
        <columns>AcctSeed__Account_Payable_Frequency__c</columns>
        <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
        <columns>AcctSeed__Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Next_Account_Payable_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Create in Next 7 Days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Recurring Payable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>